--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-youtube": "^10.1.0",
+    "swiper": "^11.2.10",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
