chore: vercel.json 스키마 및 crons 필드 업데이트

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "cron": [
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "crons": [
     {
       "path": "/api/youtube-refresh?distance=3km",
       "schedule": "0 3 * * *"
