--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "crons": [
     {
-      "path": "/api/youtube-refresh?distance=3km",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/youtube-refresh?distance=5km",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/youtube-refresh?distance=10km",
+      "path": "/api/youtube-refresh",
       "schedule": "0 3 * * *"
     }
   ]
