--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.2.10",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
