--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.10",
     "@tanstack/react-query": "^5.80.5",
+    "framer-motion": "^12.23.24",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
