--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "crons": [
     {
       "path": "/api/youtube-refresh",
-      "schedule": "0 3 * * *"
+      "schedule": "0 0 1 * *"
     }
   ]
 }
