test: youtube-refresh API 테스트용 임시 수정

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "crons": [
     {
       "path": "/api/youtube-refresh",
-      "schedule": "0 0 1 * *"
+      "schedule": "* * * * *"
     }
   ]
 }
