chore : 이미지 포맷·브라우저 타깃·기본 폰트 설정 업데이트

--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "> 0.25%",
+    "not dead",
+    "not IE 11",
+    "not op_mini all"
+  ]
 }
